<?xml version="1.0"?>
<package format="2">
  <name>pct_planner</name>
  <version>0.0.0</version>
  <description>pct_planner</description>
  <maintainer email="guest@todo.todo">guest</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
</package>
